--- a/library-api/src/main/resources/application.yml
+++ b/library-api/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     properties:
         hibernate:
             format_sql: true
