Add user authentication and authorization
Introduces Spring Security with custom user management, login view, and role-based access control. Adds Usuario entity, repository, service, DTO, and mapper. Updates Autor and Livro models to reference Usuario for last update tracking. Secures controller endpoints with role checks and handles access denied exceptions. Adds login page and required dependencies.

--- a/library-api/pom.xml
+++ b/library-api/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.3</version>
+		<version>3.5.5</version>
 		<relativePath/>
 	</parent>
 	<groupId>com.victormacedov</groupId>
@@ -64,7 +64,29 @@
             <artifactId>mapstruct</artifactId>
             <version>${org.mapstruct.version}</version>
         </dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-springsecurity6</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.hypersistence</groupId>
+            <artifactId>hypersistence-utils-hibernate-63</artifactId>
+            <version>3.10.1</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
