--- a/library-api/pom.xml
+++ b/library-api/pom.xml
@@ -86,6 +86,10 @@
             <artifactId>hypersistence-utils-hibernate-63</artifactId>
             <version>3.10.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
+        </dependency>
     </dependencies>
 
 	<build>
