--- a/library-api/src/main/resources/application.yml
+++ b/library-api/src/main/resources/application.yml
@@ -15,3 +15,11 @@ spring:
     properties:
         hibernate:
             format_sql: true
+
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: ${GOOGLE_CLIENT_ID}
+            client-secret: ${GOOGLE_CLIENT_SECRET}
