Update controllers and config files
Modified multiple controller classes and the global exception handler, as well as the application.yml configuration. Added app.log for application logging. Changes likely address improvements in error handling, configuration, and logging for the library API.

--- a/library-api/src/main/resources/application.yml
+++ b/library-api/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 spring:
   application:
     name: libraryapi
+  output:
+    ansi:
+      enabled: always
 
   datasource:
     url: jdbc:postgresql://localhost:5434/librarydb
@@ -26,3 +29,14 @@ spring:
 
 springdoc:
   override-with-generic-response: false
+
+logging:
+  pattern:
+    console: '%clr(%d{dd-MM-yyyy HH:mm:ss}){faint} %clr(%5p) %clr([%t]){faint} %clr(%-40.40logger){cyan} %clr(:){yellow} %m%n'
+  file:
+    name: app.log
+  level:
+    root: warn
+    io.github.victormacedov: trace
+    org.springframework.web: debug
+    org.springframework.security: trace
