Insert Spring Actuator
Insert Spring Actuator and your specific port.

--- a/library-api/src/main/resources/application.yml
+++ b/library-api/src/main/resources/application.yml
@@ -40,3 +40,11 @@ logging:
     io.github.victormacedov: trace
     org.springframework.web: debug
     org.springframework.security: trace
+
+management:
+  server:
+    port: 9090
+  endpoints:
+    web:
+      exposure:
+        include: '*'
