--- a/library-api/src/main/resources/application.yml
+++ b/library-api/src/main/resources/application.yml
@@ -1,14 +1,16 @@
 spring:
   application:
     name: libraryapi
+  profiles:
+    active: production
   output:
     ansi:
       enabled: always
 
   datasource:
-    url: jdbc:postgresql://localhost:5434/librarydb
-    username: postgres
-    password: postgres
+    url: ${DATASOURCE_URL:jdbc:postgresql://localhost:5434/librarydb}
+    username: ${DATASOURCE_USERNAME:postgres}
+    password: ${DATASOURCE_PASSWORD:postgres}
     driver-class-name: org.postgresql.Driver
 
   jpa:
@@ -48,3 +50,12 @@ management:
     web:
       exposure:
         include: '*'
+
+#Production profile
+---
+spring:
+  config:
+    activate:
+      on-profile: production
+  jpa:
+    show-sql: false
